// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > fetches and renders robots 1`] = `
<div>
  <header>
    <h1
      class="f1"
    >
      RoboFriends
    </h1>
    <div
      class="pa2"
    >
      <input
        class="pa3 ba b--green bg-lightest-blue tc"
        id="search"
        placeholder="search robots"
        type="search"
      />
    </div>
  </header>
  <main>
    <div
      class="scroll"
    >
      <article
        class="bg-light-green dib br3 ma2 pa3 grow bw2 shadow-5"
      >
        <img
          alt="robots"
          fetchpriority="high"
          height="200"
          src="https://robohash.org/1?size=200x200"
          width="200"
        />
        <div>
          <h2>
            Leanne Graham
          </h2>
          <p>
            Sincere@april.biz
          </p>
        </div>
      </article>
      <article
        class="bg-light-green dib br3 ma2 pa3 grow bw2 shadow-5"
      >
        <img
          alt="robots"
          fetchpriority="high"
          height="200"
          src="https://robohash.org/2?size=200x200"
          width="200"
        />
        <div>
          <h2>
            Ervin Howell
          </h2>
          <p>
            Shanna@melissa.tv
          </p>
        </div>
      </article>
      <article
        class="bg-light-green dib br3 ma2 pa3 grow bw2 shadow-5"
      >
        <img
          alt="robots"
          fetchpriority="high"
          height="200"
          src="https://robohash.org/3?size=200x200"
          width="200"
        />
        <div>
          <h2>
            Clementine Bauch
          </h2>
          <p>
            Nathan@yesenia.net
          </p>
        </div>
      </article>
    </div>
  </main>
</div>
`;

exports[`App > renders initial loading state 1`] = `
<div>
  <h1
    class="f1"
  >
    Loading...
  </h1>
</div>
`;

exports[`App > renders on API error 1`] = `
<div>
  <h1
    class="f1"
  >
    Something went wrong
  </h1>
</div>
`;
